kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galaxy-store
  namespace: galaxy
  labels:
    app: galaxy-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: galaxy-store
  template:
    metadata:
      labels:
        app: galaxy-store
    spec:
      containers:
        - name: galaxy-store
          image: younis606/galaxy-store:latest   
          ports:
            - containerPort: 3000
apiVersion: v1
kind: Service
metadata:
  name: galaxy-store-service
  namespace: galaxy
spec:
  type: NodePort
  selector:
    app: galaxy-store
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
